# clinical-triage-env

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements_dev.txt
examples/: grpo_training.py
server/: Dockerfile  app.py  llm_grader.py  mews_scorer.py  patient_generator.py  requirements.txt  triage_environment.py  web_interface.py
tests/: test_end_to_end.py
